# gp-surfer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
config/: config.yaml
examples/: id_file_example.json  input_parameters_1000.csv
gaussianprocesses/: __init__.py  auxiliary.py  dataclass.py  kernels.py  metrics.py  models.py  processing.py  transformations.py
gaussianprocesses/scripts/: __init__.py  calc_rsquared.py  log_to_filepaths.py  plot_gp_predictions.py  train_gp_surrogates.py
scaling/: create_scaling_runs.py  isolist.json  scaling_analysis.py
scaling/data/: x_data.csv
scripts/: __init__.py  log_to_filepaths.py  train_gp_surrogates.py
tests/: data_test.py  kernel_test.py  model_test.py  transformation_test.py
workflow/: Snakefile
workflow/scripts/: write_training_jobfile.py
workflow/templates/: gp_training_job.sh
